# my-benefits

./: .gitignore  Dockerfile  README.md  app.py  example.env  pyproject.toml  set_env_vars.sh
my_benefits/: app.py  document_model.py  extract_text_from_pdf.py  extract_text_from_pdf_controller.py  get_files.py  my_benefits_model.py  topic_modeling.py  train_model.py
my_benefits/models/: pretrained_dictionary.dict  pretrained_lda_model.model  pretrained_lda_model.model.expElogbeta.npy  pretrained_lda_model.model.id2word  pretrained_lda_model.model.state
tests/: my_benefits_text.py  test_extract_text_from_pdf.py  test_my_benefits.py
tests/raw/: pdf_test_no_ocr.txt  test.txt
tests/silver/: pdf_test_no_ocr.txt
