[tool.poetry]
name = "my-benefits"
version = "0.1.0"
description = ""
authors = ["Diego Bonesso <diego.bonesso@42i.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pypdf2 = "^3.0.1"
streamlit = "^1.32.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
