[tool.poetry]
name = "my-benefits"
version = "0.1.0"
description = ""
authors = ["Diego Bonesso <diego.bonesso@42i.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.32.2"
duckdb = "^0.10.1"
pymupdf = "^1.23.26"
pylint-pytest = "^1.1.7"
boto3 = "^1.34.67"
spacy = "^3.7.4"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1.tar.gz"}
gensim = "^4.3.2"
nltk = "^3.8.1"
pypdf = "^4.1.0"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
